--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "discord_webhook_url": "DISCORD_WEBHOOK_URL",
+  "discord_webhook_url": "PASTE_YOUR_DISCORD_WEBHOOK_URL_HERE",
   "searches": [
     {
       "brand": "Paynter",
